# SLICOT-meson

./: meson.build
